// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should display custom message 1`] = `
<form
  class="ant-form ant-form-horizontal"
>
  <div
    class="ant-row ant-form-item ant-form-item-with-help"
  >
    <div
      class="ant-col ant-form-item-label"
    >
      <label
        class=""
        for="account"
        title="Account"
      >
        Account
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control has-error"
      >
        <span
          class="ant-form-item-children"
        >
          <input
            data-__field="[object Object]"
            data-__meta="[object Object]"
            id="account"
            value="antd"
          />
        </span>
        <div
          class="ant-form-explain show-help-enter"
        >
          <span>
            Account does not exist, 
            <a
              href="https://www.alipay.com/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Forgot account?
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form should display two message 1`] = `
<form
  class="ant-form ant-form-horizontal"
>
  <div
    class="ant-row ant-form-item ant-form-item-with-help"
  >
    <div
      class="ant-col ant-form-item-label"
    >
      <label
        class=""
        for="account"
        title="Account"
      >
        Account
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control has-error"
      >
        <span
          class="ant-form-item-children"
        >
          <input
            data-__field="[object Object]"
            data-__meta="[object Object]"
            id="account"
            value="+=-/"
          />
        </span>
        <div
          class="ant-form-explain show-help-enter"
        >
          Error message 1 Error message 2
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Form support error message with reactNode 1`] = `
<form
  class="ant-form ant-form-horizontal"
>
  <div
    class="ant-row ant-form-item ant-form-item-with-help"
  >
    <div
      class="ant-col ant-form-item-label"
    >
      <label
        class=""
        for="account"
        title="Account"
      >
        Account
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control has-error"
      >
        <span
          class="ant-form-item-children"
        >
          <input
            data-__field="[object Object]"
            data-__meta="[object Object]"
            id="account"
            value=""
          />
        </span>
        <div
          class="ant-form-explain show-help-enter"
        >
          <div>
            Error 1
          </div>
           
          <div>
            Error 2
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;
